# Django-SQL-Middleware_PyPI_Package-

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: release.yml
sql-inspector/: middleware.py
tests/: settings.py  test_new.py
tests/demo_app/: models.py  urls.py
